--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+ <!DOCTYPE html>  <!-- is an HTML5 declaration that defines the document type. -->
+ <html lang="en"> <!--specifies the document language -->
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Spotify - Your favourite music is here</title>
-        <link rel="stylesheet" href="style.css">
+ <title>Spotify - Your favourite music is here</title> <!--sets the title of the document displayed in the browser tab. -->
+  <link rel="stylesheet" href="style.css"> <!--links to an stylesheet named "style.css" which is used to define the page's styles. -->
         </head>
 <body>
-    <nav>
+   <nav> <!--  code for navigation bar -->
         <ul>
             <li class="brand"><img src="logo.png" alt="Spotify"> Spotify</li>
             <li>Home</li>
